// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameList component renders correctly when don't has games 1`] = `
.c0 h1 {
  margin-top: 25px;
  text-align: center;
  color: #ff6347;
}

.c0 .ant-col {
  margin-top: 20px;
  margin-bottom: 20px;
  height: 470px;
  min-height: 470px;
  max-height: 470px;
}

<div
  className="c0"
>
  <h1>
    There are no games available, please try again later...
  </h1>
</div>
`;

exports[`GameList component renders correctly when has games 1`] = `
.c1 {
  outline: none;
  background-color: #373e49;
  color: #ff6347;
  border-radius: 15px;
  height: inherit;
  padding: 10px;
  margin: 10px;
  text-align: center;
}

.c1:hover {
  background-color: #2c313a;
  cursor: pointer;
}

.c1 div:nth-child(1) div:nth-child(1) {
  width: inherit !important;
  height: 250px !important;
}

.c1 div:nth-child(2) > span,
.c1 div:nth-child(3) > span {
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 1;
}

.c1 > div:nth-child(4) > span {
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
}

.c0 h1 {
  margin-top: 25px;
  text-align: center;
  color: #ff6347;
}

.c0 .ant-col {
  margin-top: 20px;
  margin-bottom: 20px;
  height: 470px;
  min-height: 470px;
  max-height: 470px;
}

<div
  className="c0"
>
  <h1>
    Showing a maximum of 
    24
     games...
  </h1>
  <div
    className="ant-col ant-col-6"
  >
    <div
      className="c1"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <div
          style={
            Object {
              "height": "360px",
              "width": "640px",
            }
          }
        />
      </div>
      <div>
        <strong>
          Title: 
        </strong>
        <span>
          Super Mario Kart
        </span>
      </div>
      <div>
        <strong>
          Platform: 
        </strong>
        <span>
          Super Nintendo Entertainment System
        </span>
      </div>
      <div>
        <strong>
          Overview: 
        </strong>
        <span>
          The best kart game in the world, y' now
        </span>
      </div>
    </div>
  </div>
  <div
    className="ant-col ant-col-6"
  >
    <div
      className="c1"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <div
          style={
            Object {
              "height": "360px",
              "width": "640px",
            }
          }
        />
      </div>
      <div>
        <strong>
          Title: 
        </strong>
        <span>
          Super Mario Kart
        </span>
      </div>
      <div>
        <strong>
          Platform: 
        </strong>
        <span>
          Super Nintendo Entertainment System
        </span>
      </div>
      <div>
        <strong>
          Overview: 
        </strong>
        <span>
          The best kart game in the world, y' now
        </span>
      </div>
    </div>
  </div>
  <div
    className="ant-col ant-col-6"
  >
    <div
      className="c1"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex={0}
    >
      <div>
        <div
          style={
            Object {
              "height": "360px",
              "width": "640px",
            }
          }
        />
      </div>
      <div>
        <strong>
          Title: 
        </strong>
        <span>
          Super Mario Kart
        </span>
      </div>
      <div>
        <strong>
          Platform: 
        </strong>
        <span>
          Super Nintendo Entertainment System
        </span>
      </div>
      <div>
        <strong>
          Overview: 
        </strong>
        <span>
          The best kart game in the world, y' now
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`GameList component renders correctly when isLoading 1`] = `
.c0 h1 {
  margin-top: 25px;
  text-align: center;
  color: #ff6347;
}

.c0 .ant-col {
  margin-top: 20px;
  margin-bottom: 20px;
  height: 470px;
  min-height: 470px;
  max-height: 470px;
}

<div
  className="c0"
>
  <h1>
    <div
      className="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text"
    >
      <span
        className="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
      </span>
      <div
        className="ant-spin-text"
      >
        Loading games...
      </div>
    </div>
  </h1>
</div>
`;
